@@ -480,13 +480,13 @@ int ExultStudio::init_npc_window
 
 static void Npc_response
 	(
-	int id,
+	Exult_server::Msg_type id,
 	unsigned char *data,
-	int datalen
+	int datalen,
+	void * /* client */
 	)
 	{
-	Exult_server::Msg_type mid = (Exult_server::Msg_type) id;
-	if (mid == Exult_server::user_responded)
+	if (id == Exult_server::user_responded)
 		ExultStudio::get_instance()->close_npc_window();
 	//+++++cancel??
 	}
